<resources>
    <string name="app_name">IdiomApp</string>
    <string name="registros">Registros</string>
    <string name="buscar_registro">Buscar Registro</string>
    <string name="a_adir_registro">Añadir Registro</string>
    <string name="registro">Registro</string>
    <string name="crear_registro">Crear Registro</string>
    <string name="adicionar_imagen">Adicionar imágen</string>
    <string name="traducciones">Traducciones</string>
    <string name="a_adir_otro_idioma">+ Añadir otro idioma</string>
    <string name="categor_as">Categorías</string>
    <string name="a_adir_otra_etiqueta">+ Añadir etiqueta</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="Registro">Registro</string>
    <string name="Emparejar">Emparejar</string>
    <string name="Escritura">Escritura</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="IDIOMAS">IDIOMAS</string>
    <string name="no_aplica_al_apartado_de_registros">No aplica al apartado de Registros</string>
    <string name="de">De</string>
    <string name="a">a</string>
    <string name="CATEGORIAS">CATEGORÍAS</string>
    <string name="introCate">Seleccionar categorías</string>
    <string name="anadirCategorias">Añadir categorías</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="anadir_categorias">Anadir Categorías</string>
    <string name="escriba_una_categoria">Escriba una categoría</string>
    <string name="Banderas">Banderas</string>
    <string name="bandera">Bandera</string>
    <string name="Categoria">Categoría</string>
    <string name="idiomapp">IDIOMAPP</string>
    <string name="categor_a">Categorías</string>
    <string name="Borrar">Borrar</string>
    <string name="al_borrar">Se eliminará esta categoría de cada expresión guardada</string>
    <string name="imagen_de_idiomapp">Imagen de IdiomApp</string>
    <string name="Anadir">Añadir</string>
    <string name="su_dispositivo_no_permite_este_lenguaje">Su dispositivo no admite el lenguaje: %s</string>
    <string name="a_adir_de_galer_a">Añadir de galería</string>
    <string name="a_adir_de_c_mara">Añadir de cámara</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_al_obtener_la_imagen">"Error al obtener la imagen "</string>
    <string name="error">Error</string>
    <string name="Tarjetas">Tarjetas</string>
    <string name="Cargando">Cargando</string>
    <string name="escuchar">Escuchar</string>
    <string name="Anterior">Anterior</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Comprobar">Comprobar</string>
    <string name="Resolver">Resolver</string>
    <string name="Bandera">Bandera</string>
    <string name="Pronunciar">Pronunciar</string>
    <string name="agregue_traducci_n">Agregue traducción</string>
    <string name="no_existen_palabras_con_los_datos_introducidos">No existen registros con los idiomas o categorías seleccionadas</string>
    <string name="no_existen_suficientes_registros">No existen suficientes registros con los idiomas o categorías seleccionadas. Se necesitan al menos 4 parejas de idiomas</string>
    <string name="nuevo_registro">Nuevo Registro</string>
    <string name="editar_registro">Editar registro</string>
    <string name="Felicidades">¡Felicidades!</string>
    <string name="Has_completado_ejercicio">Has completado el ejercicio</string>
    <string name="El_tiempo_ha_sido">El tiempo ha sido: %s</string>
    <string name="Los_errores_han_sido">Los errores han sido: %d</string>
    <string name="Repetir">Repetir</string>
    <string name="salir">Salir</string>
    <string name="seguro_desea_salir">¿Desea salir de la aplicación?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="La_respuesta_es_correcta">La respuesta es correcta</string>
    <string name="La_respuesta_es_incorrecta">La respuesta es incorrecta</string>
    <string name="Errores_aciertos">Hasta ahora Errores: %d  Aciertos: %d</string>
    <string name="lo_sentimos">¡Ups!</string>
    <string name="ups">¡Ups!</string>
    <string name="no_hay_suficientes_registros">No existen registros suficientes con los idiomas o categorías seleccionadas</string>
    <string name="volver">Volver</string>
    <string name="Esta_seguro_borrar">¿Desea realmente eliminar la categoría?</string>
    <string name="hablar">Pronunciar</string>
    <string name="cerrar">Cerrar</string>
    <string name="Traduccion">Traducción</string>
    <string name="idioma">Idioma</string>
    <string name="MenuPrincipal">Menú Principal</string>
    <string name="permisos_no_concedidos">Los permisos no fueron concedidos</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="girar_c_mara">Girar cámara</string>
    <string name="maximo_traducciones">Máximo de traducciones alcanzado</string>
    <string name="no_debe_espacios_vacios">No deben haber traducciones vacías</string>
    <string name="no_debe_idiomas">No deben haber idiomas de traducciones repetidos</string>
    <string name="_1_0x">1.0X</string>
    <string name="iniciar">Iniciar</string>
    <string name="vacio">Vacío</string>
    <string name="ver_soluci_n">Ver solución</string>
    <string name="Esta_seguro_borrar_record">Eliminar Registro</string>
    <string name="al_borrar_record">¿Estás seguro de eliminar este registro?</string>
</resources>