<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityResultGame">


    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/btnRepetir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Felicidades"
            android:textSize="@dimen/text_h"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Has_completado_ejercicio"
            android:textSize="@dimen/text_h"/>

        <TextView
            android:id="@+id/tvTiempo"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/El_tiempo_ha_sido"
            android:textSize="@dimen/text_h"/>

        <TextView
            android:id="@+id/tv_errors"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Los_errores_han_sido"
            android:textSize="@dimen/text_h"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnRepetir"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnIrAlMenu"
        android:background="@drawable/almostredonded_price_red"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/Repetir"/>

    <Button
        android:id="@+id/btnIrAlMenu"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/almostredonded_price_red"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/Repetir"/>


</androidx.constraintlayout.widget.ConstraintLayout>