<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewselect"
            android:background="@color/orange_transparent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewselected_bad"
            android:background="@color/red_transparent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewselected_correct"
            android:background="@color/verde_transparent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/Bandera"
            android:src="@drawable/spain"
            android:id="@+id/iv_image"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_sound"/>

        <ImageView
            android:contentDescription="@string/Pronunciar"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_volume_up_24"
            android:id="@+id/iv_sound"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="12dp"/>

            <TextView
                android:text="@string/Cargando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_m"
                android:layout_margin="12dp"
                android:id="@+id/tv_sentence"
                app:layout_constraintStart_toEndOf="@id/iv_sound"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/colorOnSurface"/>

</LinearLayout>