<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMatch">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Toolbar-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnPrimary"
                android:fitsSystemWindows="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Emparejar"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp" />

                <Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_m"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/chronometer">

                </Chronometer>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivIconSetting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_menu_24"
                    android:visibility="visible"
                    app:tint="?attr/colorPrimary" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <!--Content-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AppBar">

            <View
                android:id="@+id/viewUp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorPrimary"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                app:layout_constraintTop_toBottomOf="@id/viewUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/viewDown"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <View
                android:id="@+id/viewDown"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorPrimary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/AppBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?attr/colorOnPrimary"
            android:visibility="gone"
            android:id="@+id/cl_list_null">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hay_suficientes_registros"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/text_h"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_return"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/button_redonded"
                android:text="@string/volver"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>